<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>

    <string name="app_name">Remind.me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="notes">Notes (Optional)</string>
    <string name="repeat">Repeat</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="notes_desc"><u>Notes : </u> %s</string>
    <string name="expired">Expired</string>
    <string name="ongoing">On Going</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="add_title">Please add title</string>
    <string name="set_time">Please set time larger that present</string>

    <string-array name="left_menu">
        <item>Home</item>
        <item>History</item>
        <item>Feedback</item>
        <item>Settings</item>
    </string-array>

    <string name="desc_home">Home</string>
    <string name="desc_menu">Menu</string>
    <string name="add_task">Task</string>
    <string name="repeat_day">Day</string>
    <string name="repeat_week">Week</string>
    <string name="repeat_month">Month</string>
    <string name="repeat_year">Year</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_general">General</string>
    <string name="setting_style">Style</string>
    <string name="setting_notification_bar_key">notification_bar</string>
    <string name="setting_notification_bar">Show on Notification Bar</string>
    <string name="setting_notification_bar_desc">Show task on notification bar</string>
    <string name="setting_popup_key">popup</string>
    <string name="setting_popup">Show Popup</string>
    <string name="setting_popup_desc">Show task as Popup Dialog</string>
    <string name="setting_vibrate_key">vibrate</string>
    <string name="setting_vibrate">Enable vibrate</string>
    <string name="setting_vibrate_summary">Vibrate device when an alarm sets off. It follows the device\'s vibrate setting</string>
    <string name="setting_vibrate_pattern_key">vibrate_pattern</string>
    <string name="setting_vibrate_pattern">Vibrate Pattern</string>
    <string name="setting_vibrate_pattern_summary">Vibrate every %s. It only applicable when ""Show Popup"" mode is activated</string>
    <string name="setting_sound_alarm_key">sound_alarm</string>
    <string name="setting_sound_alarm_summary">Select sound for the alarm</string>
    <string name="settings_sound_alarm_title">Alarm Sounds</string>
    <string name="setting_sound_key">sound</string>
    <string name="setting_sound">Enable sound</string>
    <string name="setting_sound_summary">Play sound when an alarm sets off. It follows the device\'s sound setting</string>
    <string name="setting_sound_pattern_key">sound_pattern</string>
    <string name="setting_sound_summary_pattern">Alarm sound will play %s. It only applicable when ""Show Popup"" mode is activated</string>
    <string name="setting_sound_title_pattern">Sound Pattern</string>
    <string name="setting_storage">Storage</string>
    <string name="setting_storage_key">storage_key</string>
    <string name="setting_snooze_key">snooze_key</string>
    <string name="setting_security">Security</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_pin_key">pin_key</string>
    <string name="setting_backup_key">backup_key</string>
    <string name="setting_pin">PIN</string>
    <string name="setting_pin_summary">All task will be secured using PIN</string>
    <string name="setting_backup_summary">Backup your data to sdcard</string>
    <string name="setting_touch_screen">Touch Mode</string>
    <string name="setting_touch_screen_key">touch_snooze</string>
    <string name="setting_touch_screen_summary">When popup task is shown, touching the screen will stop vibrating / ringing </string>
    <string name="setting_time_key">time_key</string>
    <string name="setting_screen_timeout_key">screen_timeout_key</string>
    <string name="today_you_have"><u>Today you have %1$s task. Starting at %2$s</u></string>

    <string-array name="setting_sound_pattern_entries">
        <item>Once</item>
        <item>Continously</item>
    </string-array>
    <string-array name="setting_sound_pattern_values">
        <item>false</item>
        <item>true</item>
    </string-array>
    <string-array name="setting_pattern_entries">
        <item>1 Second</item>
        <item>3 Seconds</item>
        <item>7 Seconds</item>
        <item>10 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minutes</item>
    </string-array>
    <string-array name="setting_pattern_values">
        <item>1000</item>
        <item>3000</item>
        <item>7000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
    </string-array>
    <string-array name="setting_storage_entries">
        <item>Never</item>
        <item>One Day</item>
        <item>One Month</item>
        <item>One Year</item>
    </string-array>
    <string-array name="setting_storage_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="setting_snooze_entries">
        <item>1 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
    </string-array>
    <string-array name="setting_snooze_values">
        <item>60000</item>
        <item>300000</item>
        <item>600000</item>
        <item>1200000</item>
        <item>1800000</item>
    </string-array>

    <string-array name="setting_time_format">
        <item>12 Hour</item>
        <item>24 Hour</item>
    </string-array>

    <string-array name="setting_time_values">
        <item>false</item>
        <item>true</item>
    </string-array>

    <string-array name="setting_screen_timeout">
        <item>Stay Awake</item>
        <item>Sleep</item>
    </string-array>

    <string-array name="setting_screen_values">
        <item>awake</item>
        <item>sleep</item>
    </string-array>


    <string-array name="motivation_word">
        <item>Hi, Have a great day!</item>
        <item>Your smile, Love it !</item>
        <item>Be Happy and Keep Smile</item>
        <item>Stop Wishing. Start Doing</item>
    </string-array>

    <string name="setting_screentimeout_awake_desc">Phone will stay awake until user dismiss the task window. Consume more battery but more guarantee that user will be notice</string>
    <string name="setting_screentimeout_sleep_desc">Phone will sleep after task is activated. After sometimes (Follow phone settings - screen timeout) screen will dim out and task will stop notify user. Less battery use</string>
    <string name="something_wrong">Something going wrong, please do it again</string>
    <string name="setting_time_desc">Time is using %s format</string>
    <string name="setting_snooze_desc">Snooze time for alarm is %s </string>
    <string name="setting_storage_desc">Delete task and attachment on history after %s </string>
    <string name="setting_storage_title">Delete History</string>
    <string name="setting_snooze_title">Snooze</string>
    <string name="setting_screen_timeout_title">Screen Sleep</string>
    <string name="setting_time_title">Time Format</string>
    <string name="setting_storage_never_delete">History and attachment will never be deleted</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="num_task">%s Task</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="alarm">Alarm</string>
    <string name="empty_taks">Add task and start working</string>
    <string name="text_empty_view">Set a Reminder for the time of the appointment\n and you won\'t miss a thing !</string>
    <string name="ups_something_wrong">Ups something wrong..</string>
    <string name="available_on_next_update">Available on next update. Stay tuned..</string>
    <string name="pin">PIN (6 Digits)</string>
    <string name="confirm_pin">Confirm PIN (6 Digits)</string>
    <string name="pin_dont_match">PIN Don\'t match</string>
    <string name="pin_saved">PIN Saved</string>
    <string name="pin_on">PIN On</string>
    <string name="pin_off">PIN Off</string>
    <string name="pin_set_off">PIN set off</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="ringtone">Ringtone</string>
    <string name="music">Music</string>
    <string name="hold_to_start_recording">Hold to start recording</string>
    <string name="release_to_stop_recording">Release to stop recording</string>
    <string name="move_to_cancel_recording">Move outside circle to cancel</string>
    <string name="time_00">00:00</string>
    <string name="enable_sounds">Please enable your media seound</string>
    <string name="cant_close_still_playing">Can\'t close while still playing</string>
</resources>